--- a/app/src/main/res/layout/server_dialog.xml
+++ b/app/src/main/res/layout/server_dialog.xml
@@ -5,26 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="10dp"
-        android:text="服务器Ip"
+        android:text="服务器IP"
         android:textSize="20sp" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/black"/>
+    <com.zxdz.car.base.view.IPEditText
+        android:id="@+id/server_edt"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
         <Button
-            android:id="@+id/area_btn_ok"
+            android:id="@+id/server_btn_ok"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="确定" />
 
         <Button
-            android:id="@+id/area_btn_cancel"
+            android:id="@+id/server_btn_cancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
